[package]
name = "gashishnik-server"
description = "High-performance RAC protocol server implementation in Rust"
authors = ["Maksim Bengraf (OctoBanon) <me@octobanon.com>"]
readme = "README.md"
repository = "https://github.com/OctoBanon-Main/gashishnik-server"
license = "MIT"
version = "0.1.0"
edition = "2024"

[package.metadata]
protocol-version = "2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
async-trait = "0.1.89"

anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

bcrypt = "0.17.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }